Fix CSS comment syntax: convert JavaScript-style comment to CSS comment

--- a/public/custom-css.css
+++ b/public/custom-css.css
@@ -37,7 +37,7 @@ justify-content: center;
 }
 
 .pipeBtn svg circle:first-child{
-// fill:green !important;
+/* fill:green !important; */
 animation: createBox .80s;
 animation-iteration-count: unset;
 transform-origin: center;
