--- a/public/custom-css.css
+++ b/public/custom-css.css
@@ -383,6 +383,4 @@ font-size: 10px;
 color: #12988A;
 }
 
-.pipeCamContainer{
-display:none !important;
-}
+/* Camera container is now visible for screen+camera recording */
